Update to VoiceBuilding plugin 5.5-SNAPSHOT

--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,37 @@
 plugins {
-    id 'de.dfki.mary.voicebuilding-festvox' version '5.2.2'
-    id 'de.dfki.mary.voicebuilding-legacy' version '5.2.2'
+    id 'de.dfki.mary.voicebuilding-festvox' version '5.5-SNAPSHOT'
+    id 'de.dfki.mary.voicebuilding-legacy' version '5.5-SNAPSHOT'
 }
 
 group 'de.dfki.mary'
 version '5.3-SNAPSHOT'
 
-voice {
-    name = 'ac-nsh'
-    language = 'ru'
-    region = 'RU'
-    gender = 'male'
-    type = 'unit selection'
-    description = 'A male Russian unit selection voice'
-    license {
-        name = 'Creative Commons Attribution-ShareAlike 3.0 Unported'
-        shortName = 'CC-BY-SA'
-        url = 'http://mary.dfki.de/download/by-sa-3.0.html'
+marytts {
+    voice {
+        name = 'ac-nsh'
+        language = 'ru'
+        region = 'RU'
+        gender = 'male'
+        type = 'unit selection'
+        description = 'A male Russian unit selection voice'
+        license {
+            name = 'Creative Commons Attribution-ShareAlike 3.0 Unported'
+            shortName = 'CC-BY-SA'
+            url = 'http://mary.dfki.de/download/by-sa-3.0.html'
+        }
+        samplingRate = 16000
     }
-    samplingRate = 16000
 }
 
 repositories {
     ivy {
-        url 'http://mary.dfki.de/repo'
-        layout 'maven'
-    }
-    ivy {
-        url 'http://alphacephei.com/test/tts/'
-        layout 'pattern', {
-            artifact '[module]-[revision].[ext]'
+        url 'http://alphacephei.com/tts'
+        allowInsecureProtocol = true
+        patternLayout {
+            artifact '[artifact]-[revision].[ext]'
+        }
+        metadataSources {
+            artifact()
         }
     }
 }
@@ -55,17 +57,25 @@ task simpleLab(type: Copy) {
     }
 }
 
-legacyInit {
-    dependsOn wav, simpleLab, text
-    def basenameListFile = file("$buildDir/basenames.lst")
-    outputs.files basenameListFile
+task simpleText {
+    dependsOn processDataResources
+    def out_dir = new File("$project.buildDir/text")
+    ext.dest_dir = out_dir
+    outputs.dir(out_dir)
+
     doLast {
-        basenameListFile.withWriter { basenameList ->
-            fileTree(wav.destDir).collect {
-                it.name - '.wav'
-            }.each {
-                basenameList.writeLine it
-            }
+        out_dir.mkdirs()
+        println("$processDataResources.destinationDir/txt.done.data")
+        (new File("$processDataResources.destinationDir/txt.done.data")).eachLine { line ->
+            def elts = line.split(' "')
+            def filename = elts[0].replace(/( /, "") + ".txt"
+            println(filename)
+            (new File("$out_dir/$filename")).text = elts[1].replace(/" )/, "")
         }
     }
+}
+
+basenames {
+    dependsOn wav, simpleLab, simpleText
+    include '*'
 }
